# pictoNMT

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test_report_20250524_164119.json
Literature/: 3-9_actu_Le_Ramadan.txt
configs/: config.yaml
configs/eole/: data.yaml  model.yaml  model_vit.yaml  training.yaml
configs/hydra/launcher/: submitit_slurm.yaml
data/: arasaac_client.py  arasaac_v1.json  propicto_combined_stats.json
data/cache/arasaac/: 10133_fr_meta.json  10135_fr_meta.json  10137_fr_meta.json  10138_fr_meta.json  10144_fr_meta.json  10146_fr_meta.json  10147_fr_meta.json  10148_fr_meta.json  10149_fr_meta.json  10150_fr_meta.json  (+6753 more)
data/processed/: test.fr  test.picto  valid.fr  valid.picto
data/training_split/: test.fr  test.meta.json  test.picto  val.fr  val.meta.json  val.picto
data/vocabulary/: fr.vocab  picto.vocab
eole/docker/: build.sh
modules/transforms/: pictogram_processor.py
notebooks/: .gitignore  OpenNMT_Pytorch_Basic_Tutorial.ipynb  arasaac.ipynb  materials.ipynb
notebooks/LEAreport/: mkdocs.yml
pictollms/data/: arasaac_client.py  dataset.py
scripts/: build_metadata.py  diagnose_data.py  process_propicto.py  quick_standalone_test.py  test_data_pipeline.py  test_phase1_standalone.py
scripts/data_processing/: build_metadata.py  eole_data.py
scripts/evaluation/: evaluate_model.py
scripts/training/: train.py  train_complete.py  train_eole.py  train_simple.py
src/pictollms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: full_local_test.py  run_tests.py  test_complete_pipeline.py  test_data_access  test_data_pipeline.py  test_hybrid_encoder.py  test_picto_encoder.py
(+87 files in other folders)
