[tool.poetry]
name = "pictollms"
version = "0.1.0"
description = ""
authors = ["Robin Kokot <robin.edu.hr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
numpy = "^2.2.3"
pillow = "^11.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
