[tool.poetry]
name = "pictollms"
version = "0.1.0"
description = ""
authors = ["Robin Kokot <robin.edu.hr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
numpy = "^2.2.3"
pillow = "^11.1.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.8"
pymdown-extensions = "^10.14.3"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.4.5"
mkdocs-redirects = "^1.2.2"
mkdocs-glightbox = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
